Alignment fix

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -21,6 +21,7 @@
 	padding: 0; 
 } 
 
+
 @media (min-width: 1024px) {
 	.learn-container { 
 		padding-right: 3em; 
@@ -130,10 +131,11 @@ h2 {
 
 .text-fancy-head { 
 	font-family: 'Noto Sans JP', sans-serif !important;
-	text-shadow: 1px 2px #eeeeee;
-	color: #000 !important;
+	text-shadow: 2px 2px #eeeeee;
+	color: rgb(46, 83, 114) !important;
 	font-size: 1.5rem;
 	line-height: 2rem;
+	font-weight: bold;
 } 
 
 .text-fancy-body { 
@@ -143,8 +145,11 @@ h2 {
 } 
 
 
-.courses-head { 	
-} 
+.course-details { 
+	padding-right: 4em;
+	width: 100%; 
+	color: rgb(46, 83, 114) !important;
+}
 	
 .course-tag { 
 	/* opacity: 0.8; */
